syntax = "proto3";
package freelance.v1;
option go_package = "./freelancepb";

service FreelanceService {
  rpc Report(ReportRequest) returns (ReportResponse);
  rpc UpdateProfile(SellerProfileRequest) returns (SellerProfileResponse);
  rpc AddGig(GigAddRequest) returns (GigAddResponse);
  rpc GigList(GigListRequest) returns (GigListResponse);
  rpc GigListUser(GigListUserRequest) returns (GigListResponse);
  rpc GigData(GigDataRequest) returns (GigResponse);
}

message ReportRequest {
  string desc = 1;
  string ref_url = 2;
}

message ReportResponse {
  int32 result = 1;
}

message SellerProfileRequest {
  string user_id = 1;
  string profile_hash = 2;
}

message SellerProfileResponse {
  int32 result = 1;
}

message GigAddRequest {
  string address = 1;
  string data = 2;
}
message GigAddResponse {
  int32 result = 1;
}

message GigListRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message  GigListUserRequest {
  string address = 1;
}

message GigInfo {
  int32 id = 1;
  string address = 2;
  string data = 3;
}
message GigListResponse {
  repeated GigInfo gigs = 1;
}
message GigDataRequest {
  int32 id = 1;
}
message GigResponse{
  GigInfo gig = 1;
}
